@@ -190,9 +190,9 @@
  merc_order_of_santiago: "Order of Santiago"
  merc_order_of_aviz: "Order of Aviz"
  merc_order_of_calatrava: "Order of Calatrava"
- reconquista_knights: "Iberian Holy Orders were established"
+ reconquista_knights: "Iberian Holy Orders have been established"
  merc_order_of_assassins: "Hashashins"
- hashashins: "The Order of Assassins settled in Syria"
+ hashashins: "The Order of Assassins have settled in Syria"
  merc_hakkapelitta: "Hakkapelitta"
  merc_alemannic_guard: "Alemannic Guard"
  merc_victual_brothers: "Victual Brothers"
@@ -201,3 +201,5 @@
  merc_varangian_guard: "Varangian Guard"
  manzikert_not_happened: "The Battle of Manzikert has not happened"
  merc_kutama: "Kutama"
+ merc_jutlandic_freischar: "Jutlandic Freischar"
+ merc_geharnischte: "Geharnischte"
