@@ -201,3 +201,5 @@
  merc_varangian_guard: "Warägergarde"
  manzikert_not_happened: "Die Schlacht von Mazikert hat nicht stattgefunden"
  merc_kutama: "Kutama"
+ merc_jutlandic_freischar: "Jütländische Freischar"
+ merc_geharnischte: "Geharnischte"
