@@ -2,7 +2,8 @@
 
 # v 2.0.6 #
 
--Added the Kutama mercenary company for the Fatimids
+-Added Mamluk rebel type
+-Added some new mercenary companies
 -More German localization additions
 -Other minor bugfixes
 
